--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-slick": "^0.30.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
