--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@sweetalert2/themes": "^5.0.18",
     "bootstrap": "^5.3.3",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
@@ -19,7 +20,9 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
-    "react-slick": "^0.30.2"
+    "react-slick": "^0.30.2",
+    "sweetalert2": "^11.13.2",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
